--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Directory.Packages.props
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Directory.Packages.props
@@ -15,6 +15,7 @@
     <PackageVersion Include="FluentAssertions" Version="6.10.0" />
     <PackageVersion Include="FluentValidation" Version="11.5.1" />
     <PackageVersion Include="FluentValidation.AspNetCore" Version="11.2.2" />
+    <PackageVersion Include="GlobalUsingsAnalyzer" Version="1.4.0"/>
     <PackageVersion Include="Grpc.AspNetCore" Version="2.51.0" />
     <PackageVersion Include="Grpc.AspNetCore.Server.Reflection" Version="2.51.0" />
     <PackageVersion Include="Grpc.AspNetCore.Web" Version="2.51.0" />
