WIP.  It all compiles and runs.  Although slow in the browser for some reason.  But I want to capture this point and then will continue.

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Contracts/Web.Contracts.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Contracts/Web.Contracts.csproj
@@ -13,6 +13,8 @@
     <AdditionalFiles Include="..\..\..\..\DependencyValidation\DependencyValidation1.layerdiagram" Link="DependencyValidation1.layerdiagram">
       <Visible>False</Visible>
     </AdditionalFiles>
+    <AdditionalFiles Include="Mixins\Route.mixin" />
+    <AdditionalFiles Include="Mixins\CreateCommand.mixin" />
   </ItemGroup>
 
   <ItemGroup>
@@ -29,10 +31,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Common\Common.Contracts\Common.Contracts.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Features\Todo\" />
   </ItemGroup>
 
 </Project>
