Some CRUD mixins.  Not sure how to best do this.  Looking for places where Moxy can make the code more DRY and less boilerplate.

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Contracts/Web.Contracts.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Contracts/Web.Contracts.csproj
@@ -13,8 +13,12 @@
     <AdditionalFiles Include="..\..\..\..\DependencyValidation\DependencyValidation1.layerdiagram" Link="DependencyValidation1.layerdiagram">
       <Visible>False</Visible>
     </AdditionalFiles>
+    <AdditionalFiles Include="Mixins\DeleteCommand.mixin" />
+    <AdditionalFiles Include="Mixins\GetListQuery.mixin" />
+    <AdditionalFiles Include="Mixins\GetQuery.mixin" />
     <AdditionalFiles Include="Mixins\RouteMixin.mixin" />
     <AdditionalFiles Include="Mixins\CreateCommand.mixin" />
+    <AdditionalFiles Include="Mixins\UpdateCommand.mixin" />
   </ItemGroup>
 
   <ItemGroup>
