--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/Directory.Build.props
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/Directory.Build.props
@@ -2,5 +2,6 @@
   <Import Project="$([MSBuild]::GetPathOfFileAbove('Directory.Build.props', '$(MSBuildThisFileDirectory)../'))" />
   <PropertyGroup>
     <RootNamespace>TimeWarp.Architecture</RootNamespace>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 </Project>
