--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Directory.Packages.props
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Directory.Packages.props
@@ -16,7 +16,7 @@
     <PackageVersion Include="FluentValidation" Version="11.5.2" />
     <PackageVersion Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageVersion Include="FluentValidation.DependencyInjectionExtensions" Version="11.5.2" />
-    <PackageVersion Include="GlobalUsingsAnalyzer" Version="1.4.0"/>
+    <PackageVersion Include="GlobalUsingsAnalyzer" Version="1.4.0" />
     <PackageVersion Include="Grpc.AspNetCore" Version="2.53.0" />
     <PackageVersion Include="Grpc.AspNetCore.Server.Reflection" Version="2.53.0" />
     <PackageVersion Include="Grpc.AspNetCore.Web" Version="2.53.0" />
@@ -31,6 +31,7 @@
     <PackageVersion Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.5" />
     <PackageVersion Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.5" />
+    <PackageVersion Include="Microsoft.AspNetCore.SignalR.Core" Version="1.1.0" />
     <PackageVersion Include="Microsoft.Azure.AppConfiguration.AspNetCore" Version="5.2.0" />
     <PackageVersion Include="Microsoft.CodeAnalysis" Version="4.6.0" />
     <PackageVersion Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.3" />
