set default shell to pwsh in workflows

--- a/.github/workflows/timewarp-architecture-documentation.yml
+++ b/.github/workflows/timewarp-architecture-documentation.yml
@@ -30,6 +30,9 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}  
     runs-on: windows-latest
+    defaults:
+      run:
+        shell: pwsh
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
