--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Directory.Packages.props
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Directory.Packages.props
@@ -22,6 +22,7 @@
     <PackageVersion Include="Grpc.AspNetCore.Web" Version="2.53.0" />
     <PackageVersion Include="Grpc.Net.Client" Version="2.53.0" />
     <PackageVersion Include="Grpc.Net.Client.Web" Version="2.53.0" />
+    <PackageVersion Include="Riok.Mapperly" Version="2.8.0" />
     <PackageVersion Include="MediatR" Version="12.0.1" />
     <PackageVersion Include="MediatR.Contracts" Version="2.0.1" />
     <PackageVersion Include="MicroElements.Swashbuckle.FluentValidation" Version="5.7.0" />
