--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Directory.Packages.props
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Directory.Packages.props
@@ -1,5 +1,7 @@
 <Project>
   <ItemGroup>
+    <PackageVersion Include="Asp.Versioning.Http" Version="7.0.0" />
+    <PackageVersion Include="Asp.Versioning.Mvc" Version="7.0.0" />
     <PackageVersion Include="AutoFixture" Version="4.18.0" />
     <PackageVersion Include="AutoFixture.AutoFakeItEasy" Version="4.18.0" />
     <PackageVersion Include="AutoMapper" Version="12.0.1" />
@@ -7,7 +9,7 @@
     <PackageVersion Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.2.2" />
     <PackageVersion Include="Azure.Identity" Version="1.9.0" />
     <PackageVersion Include="BlazorComponentUtilities" Version="1.8.0" />
-    <PackageVersion Include="Blazor-State" Version="8.2.1" />
+    <PackageVersion Include="Blazor-State" Version="8.2.6" />
     <PackageVersion Include="Dawn.Guard" Version="1.12.0" />
     <PackageVersion Include="FakeItEasy" Version="7.4.0" />
     <PackageVersion Include="Fixie" Version="3.3.0" />
@@ -83,6 +85,6 @@
     <PackageVersion Include="Timewarp.OptionsValidation" Version="1.0.0-alpha.2" />
     <PackageVersion Include="timewarp-simple-icons" Version="7.17.0" />
     <PackageVersion Include="Toolbelt.Blazor.SplitContainer" Version="1.1.2" />
-    <PackageVersion Include="Yarp.ReverseProxy" Version="1.1.1" />
+    <PackageVersion Include="Yarp.ReverseProxy" Version="1.1.2" />
   </ItemGroup>
 </Project>
