--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Contracts/Web.Contracts.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Contracts/Web.Contracts.csproj
@@ -10,9 +10,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Features\Analytics\TrackEventValidiation.mixin.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="Features\Analytics\TrackEventValidiation.mixin" />
+  </ItemGroup>
+
+  <ItemGroup>
     <AdditionalFiles Include="..\..\..\..\DependencyValidation\DependencyValidation1.layerdiagram" Link="DependencyValidation1.layerdiagram">
       <Visible>False</Visible>
     </AdditionalFiles>
+    <AdditionalFiles Include="Features\Analytics\TrackEventValidiation.mixin" />
+    <AdditionalFiles Include="Features\Analytics\TrackEventValidiation.mixin.cs" />
     <AdditionalFiles Include="Mixins\DeleteCommand.mixin" />
     <AdditionalFiles Include="Mixins\GetListQuery.mixin" />
     <AdditionalFiles Include="Mixins\GetQuery.mixin" />
@@ -22,6 +32,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <!--<PackageReference Include="Asp.Versioning.Mvc" />-->
+    <!-- The above causes the following error: C:\Program Files\dotnet\sdk\7.0.400\Sdks\Microsoft.NET.Sdk\targets\Microsoft.NET.Sdk.FrameworkReferenceResolution.targets(447,5): error NETSDK1082: There was no runtime pack for Microsoft.AspNetCore.App avail
+    able for the specified RuntimeIdentifier 'browser-wasm'. [C:\git\github\TimeWarpEngineering\timewarp-architecture\Source\TimeWarp.Architecture.Template\templates\TimeWarp.Architecture\Source\ContainerApps\Web
+    \Web.Spa\Web.Spa.csproj]-->
     <PackageReference Include="FluentValidation" />
     <PackageReference Include="OneOf" />
     <PackageReference Include="MediatR" />
