--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Directory.Build.props
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Directory.Build.props
@@ -3,6 +3,7 @@
 
   <PropertyGroup>
     <Authors>Steven T. Cramer</Authors>
+    <Company>TimeWarp Enterprises</Company>
     <Product>TimeWarp.Architecture</Product>
   </PropertyGroup>
 
@@ -44,5 +45,41 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
   </ItemGroup>
+
+  <!--This is to add the CommitDate and CommitHash to your assemblyinfo -->
+
+  <PropertyGroup>
+    <GitHeadSha>Not found</GitHeadSha>
+    <DotGitDir>$([System.IO.Path]::GetFullPath('$(MSBuildThisFileDirectory).git'))</DotGitDir>
+    <HeadFileContent Condition="Exists('$(DotGitDir)/HEAD')">$([System.IO.File]::ReadAllText('$(DotGitDir)/HEAD').Trim())</HeadFileContent>
+    <RefPath Condition="$(HeadFileContent.StartsWith('ref: '))">$(DotGitDir)/$(HeadFileContent.Substring(5))</RefPath>
+    <GitHeadSha Condition="'$(RefPath)' != '' AND Exists('$(RefPath)')">$([System.IO.File]::ReadAllText('$(RefPath)').Trim())</GitHeadSha>
+    <GitHeadSha Condition="'$(HeadFileContent)' != '' AND '$(RefPath)' == ''">$(HeadFileContent)</GitHeadSha>
+  </PropertyGroup>
+
+  <Target Name="SetAssemblyMetaData" BeforeTargets="PreBuildEvent">
+    <Exec Command="git log -1 --format=%%ct" ConsoleToMSBuild="true" Condition="'$(OS)' == 'Windows_NT'">
+      <Output TaskParameter="ConsoleOutput" PropertyName="GitCommitTimestamp"/>
+    </Exec>
+    <Exec Command="git log -1 --format=%ct" ConsoleToMSBuild="true" Condition="'$(OS)' != 'Windows_NT'">
+      <Output TaskParameter="ConsoleOutput" PropertyName="GitCommitTimestamp"/>
+    </Exec>
+    <PropertyGroup>
+      <LastCommitDate>$([System.DateTime]::UnixEpoch.AddSeconds($(GitCommitTimestamp)).ToUniversalTime().ToString("yyyy-MM-ddTHH:mm:ssK"))</LastCommitDate>
+    </PropertyGroup>
+    <ItemGroup>
+      <AssemblyAttribute Include="System.Reflection.AssemblyMetadataAttribute">
+        <_Parameter1>CommitHash</_Parameter1>
+        <_Parameter2>$(GitHeadSha)</_Parameter2>
+      </AssemblyAttribute>
+      <AssemblyAttribute Include="System.Reflection.AssemblyMetadataAttribute">
+        <_Parameter1>CommitDate</_Parameter1>
+        <_Parameter2>$(LastCommitDate)</_Parameter2>
+      </AssemblyAttribute>
+    </ItemGroup>
+    <!--    <Message Importance="high" Text="OS: $(OS)" />-->
+    <!--    <Message Importance="high" Text="CommitDate: $(LastCommitDate)" />-->
+        <Message Importance="high" Text="CommitHash: $(GitHeadSha)" />
+  </Target>
 
 </Project>
