Add OneOf to IApiService.cs and WebApiService.cs

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/Common/Common.Contracts/Common.Contracts.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/Common/Common.Contracts/Common.Contracts.csproj
@@ -3,6 +3,7 @@
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" />
     <PackageReference Include="Microsoft.Extensions.Options" />
+    <PackageReference Include="OneOf" />
   </ItemGroup>
   
 </Project>
