Ignore generated files.  The paths are just too long.

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/.gitignore
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/.gitignore
@@ -303,3 +303,5 @@ GeneratedCode/
 
 # Tye intermediate files
 .tye/
+/Source/ContainerApps/Web/Web.Contracts/Generated/**
+/Tests/TimeWarp.Testing/Generated/**
