ignore generated files

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/.gitignore
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/.gitignore
@@ -304,4 +304,5 @@ GeneratedCode/
 # Tye intermediate files
 .tye/
 /Source/ContainerApps/Web/Web.Contracts/Generated/**
+/Source/ContainerApps/Web/Web.Spa/Generated/**
 /Tests/TimeWarp.Testing/Generated/**
