Use Moxy Nuget vs ProjectRef

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Contracts/Web.Contracts.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Contracts/Web.Contracts.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
 
   <ItemGroup>
+<!--    <ProjectReference Include="..\..\..\..\..\..\..\..\..\..\mrpmorris\Morris.Moxy\Source\Lib\Morris.Moxy\Morris.Moxy.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false"  />-->
     <ProjectReference Include="..\..\..\Common\Common.Contracts\Common.Contracts.csproj"/>
   </ItemGroup>
 
