Move RouteMixin into Common.Contracts.csproj
And link to it from API and Web Contracts.

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/Common/Common.Contracts/Common.Contracts.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/Common/Common.Contracts/Common.Contracts.csproj
@@ -6,5 +6,9 @@
     <PackageReference Include="Microsoft.Extensions.Options" />
     <PackageReference Include="OneOf" />
   </ItemGroup>
+
+  <ItemGroup>
+    <AdditionalFiles Include="Mixins\RouteMixin.mixin" />
+  </ItemGroup>
   
 </Project>
